@@ -151,6 +151,7 @@ class SSHBackend(duplicity.backend.Backend):
                      "(?i)permission denied",
                      "authenticity",
                      "(?i)no such file or directory",
+                     "Couldn't delete file: No such file or directory",
                      "Couldn't delete file",
                      "open(.*): Failure"]
         max_response_len = max([len(p) for p in responses[1:]])
@@ -189,12 +190,17 @@ class SSHBackend(duplicity.backend.Backend):
                     log.Warn("Host key authenticity could not be verified (missing known_hosts entry?)")
                     break
                 elif match == 6:
-                    log.Warn("Remote file or directory does not exist in command='%s'" % (commandline,))
-                    break
+                    if not child.before.strip().startswith("rm"):
+                        log.Warn("Remote file or directory does not exist in command='%s'" % (commandline,))
+                        break
                 elif match == 7:
+                    if not child.before.strip().startswith("Removing"):
+                        log.Warn("Could not delete file in command='%s'" % (commandline,))
+                        break;
+                elif match == 8:
                     log.Warn("Could not delete file in command='%s'" % (commandline,))
                     break
-                elif match == 8:
+                elif match == 9:
                     log.Warn("Could not open file in command='%s'" % (commandline,))
                     break
             child.close(force = True)
